# ros_project

./: .gitignore  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
bagfiles/: 2022-11-24-21-41-59.bag  2022-11-28-03-05-17.bag
dump/: ros.txt  rosmsg.txt  rosnode.txt
dump/q1a/: ros_param.txt  rosservice.txt  rossrv.txt  rostopic.txt  std_msgs
src/foronz_control/: package.xml
src/foronz_control/config/: thruster_manager.yaml
src/foronz_control/launch/: start_thruster_manager.launch
src/foronz_description/: package.xml
src/foronz_description/launch/: upload.launch  upload_foronz.launch  upload_foronz_default.launch
src/foronz_description/robots/: default.xacro  rexrov_default.xacro
src/foronz_description/urdf/: foronz.gazebo.xacro  foronz_actuators.xacro  foronz_base.xacro
src/foronz_simulator/foronz_control/: CMakeLists.txt  package.xml
src/foronz_simulator/foronz_description/: CMakeLists.txt  package.xml
src/foronz_simulator/foronz_description/launch/: message_to_tf.launch
src/foronz_simulator/foronz_description/test/: test_urdf_files.py  test_urdf_files.test
src/foronz_simulator/foronz_description/urdf/: foronz_sensors.xacro
src/my_project/: CMakeLists.txt  package.xml
src/my_project/launch/: task2.launch  task3.launch  task4d.launch  temp.launch
src/my_project/scripts/: controller.py  thruster_allocator.py  wrench_controller.py
src/my_teleop_twist_keyboard/: CMakeLists.txt  package.xml  teleop_twist_keyboard.py
src/rexrov_control/: CMakeLists.txt  package.xml
src/teleop_twist_keyboard/: teleop_twist_keyboard.py
(+7 files in other folders)
